Profiles, Object Channels, Input, Default Maps, Game Mode and Game State configured.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,3 +2,5 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=61582AA946C29C1B724076A1B9B93419
+Description=Pong Clone implemented using only Blueprints
+
